Updated UI for product Table and Routing

--- a/frontend/src/component/oderConfirmation/orderConfirmation.css
+++ b/frontend/src/component/oderConfirmation/orderConfirmation.css
@@ -80,3 +80,8 @@
     font-size: 1.1rem;
     margin-top: 2.7rem;
 }
+
+.orderConfirmationContainer button:hover{
+    cursor: pointer;
+    background-color: #767ec9;
+}
