--- a/frontend/src/component/sidebar/SideBar.css
+++ b/frontend/src/component/sidebar/SideBar.css
@@ -5,8 +5,8 @@
 }
 
 .sidebar{
-    width: 6%;
-    height: 50rem;
+    width: 3%;
+    height:100vh;
     text-align: center;
     background-color: #5861AE;
     border: 1px solid #5861AE;
