--- a/frontend/src/component/header/Header.css
+++ b/frontend/src/component/header/Header.css
@@ -13,7 +13,7 @@ li{
 .header{
     /* border: 1px solid; */
     width: 100%;
-    height: 5.7rem;
+    height: 5rem;
      display: grid;
      grid-template-columns: 64% 36%  ;
      box-shadow: 0px 0px 5px gray;
@@ -29,15 +29,14 @@ li{
     font-weight: bold;
 }
 .menu{
-    grid-column:2/-1 ;
-   
+    height: 100%;
 }
 .menu ul{
-    height: 5rem;
+    height: 100%;
     display: grid;
-   grid-template-columns: 20% 20% 20% 40%;
-   justify-content: center;
-   align-items: center;
+    grid-template-columns: 20% 20% 20% 40%;
+    justify-content: center;
+    align-items: center;
 }
 ul li{
     color: #565657;
@@ -46,10 +45,10 @@ ul li{
 }
 .user{
     background-color: #5861AE;
-    padding: 29px;
     display: flex;
-    /* justify-content: end; */
+    justify-content: center;
     align-items: center;
+    height: 100%;
 }
 .profile{
     width:34px;
