--- a/frontend/src/component/orderSummary/orderSummary.css
+++ b/frontend/src/component/orderSummary/orderSummary.css
@@ -1,10 +1,11 @@
 .orderSummaryContainer{
     position: absolute;
-    top:0;
+    top:80px;
     left:40vw;
-    height: 100vh;
+    height: 100%;
     width: 60vw;
     background-color:#FFFFFF;
+    z-index: 1;
 }
 
 
