--- a/frontend/src/component/Oder/PastOrder.css
+++ b/frontend/src/component/Oder/PastOrder.css
@@ -10,7 +10,7 @@
 }
 .container{
     position: absolute;
-    top: 98px;
+    top: 88px;
     left:3rem;
     display: grid;
     grid-template-columns: 20% 30% 50%;
@@ -25,14 +25,31 @@
     padding-top: 20px;
      /* justify-content: flex-start; */
      align-items: start; 
-    margin-left: 3rem;
-    height: 300px;
+    margin-left: 5rem;
+    height: 0px;
     margin-bottom: 250px;
+}
+.noOrders{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 38.3rem;
+
+}
+
+.t{
+    height: 500px;
+    overflow-y: scroll;
+    width: 1200px;
 }
 
 .t .pastOrdertable{
     border-collapse: collapse;
-    width: 100%;
+    width: 1200px;
+    height: 100%;
+    margin-left: 5%;
+    overflow-y: scroll;
 }
 .pastOrdertable thead tr{
     background-color:  #383737;
@@ -55,16 +72,19 @@
     font-weight: 400;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+#date-time{
+width: 15%;
+}
 .create-search{
     grid-column: 3/4;
-    width: 131%;
+    width: 84%;
     display: flex;
     gap: 10px;
     padding-top: 20px;
     justify-content: end;
     align-items: start;
     margin-top: 0;
-    height:300px
+    height:0px;
 }
 .search{
     margin-left: 20px;
@@ -74,7 +94,7 @@
     border: 1px solid #ffff;
     color: red;
 }
-.red{
+#cancelled-red{
     color: red;
 }
 
@@ -82,4 +102,14 @@
     padding: 6px 17px 6px 17px;
     color: #5861AE;
     border: 1px solid #5861AE;
+}
+
+.empty-create-button{
+    position: absolute;
+    padding: 6px 17px 6px 17px;
+    color: #5861AE;
+    border: 1px solid #5861AE;
+    top: 21rem;
+    left: 45rem;
+
 }
